# linkstore

./: .dockerignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  README.md  fly.toml  package-lock.json  package.json  run-dev.sh  svelte.config.js
.github/workflows/: build.yml
backend/: .env.sample  package.json  tsconfig.json
backend/src/: api.ts  codecs.ts  config.ts  db-utils.ts  db.ts  dist.ts  main.ts  types.ts
frontend/: .eslintrc.cjs  .prettierrc  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx  api.ts  app.d.ts  app.html  hooks.server.ts  index.css  index.html  index.tsx  store.ts
frontend/src/components/: App.tsx  Create.tsx  FrontPage.module.css  FrontPage.tsx  NotFound.module.css  NotFound.tsx  utils.module.css  utils.tsx
frontend/src/lib/: types.ts
frontend/src/lib/server/: env.ts  utils.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  Link.svelte
frontend/src/routes/new/: +page.server.ts
frontend/src/slices/: searchSlice.ts
frontend/src/utils/: location.ts
src/: app.html  auth.rs  config.rs  db.rs  main.rs  result.rs  util.rs
src/components/: mod.rs  nav.rs  page.rs  pagination.rs  style.rs
src/lib/server/: db-utils.ts  db.ts  schemas.ts  utils.ts
src/routes/: +page.server.ts  +page.svelte  Link.svelte  Pagination.svelte  auth.rs  index.rs  link.rs  mod.rs  new.rs
src/routes/new/: +page.server.ts  +page.svelte
templates/: base.html  index.html  login.html  new.html
templates/components/: nav.html  pagination.html
